logs/core_bot.log
  File "/Users/alex/Desktop/project/Gov.de/src/bots/core_bot.py", line 232
    )
    ^
SyntaxError: f-string expression part cannot include a backslash
